# Tokenize

./: .gitignore  CORE_COMPONENT_SUMMARY.md  README.md  complete_git_setup.ps1  core_component_example.rs  git_setup_instructions.txt  init_git.bat  init_git.ps1  package.json  push_to_github.bat  push_to_github.ps1  server.js  server.py  start.bat  start.sh  test_api.html  test_core_api.py  test_fix.py  tokenization_digital_wallet.csv
tokenize_backend/: Cargo.toml  README_RUST.md  build_and_run.bat  check_build.bat  setup_build_tools.bat
tokenize_backend/src/: core_component.py  core_component.rs  csv_parser.rs  database.rs  main.rs  models.rs  routes.rs  tests.rs
tokenize_frontend/: index.html  package.json
tokenize_frontend/src/: index.js
tokenize_wasm/: Cargo.toml  README.md
tokenize_wasm/src/: lib.rs
